--- a/data-analyst.html
+++ b/data-analyst.html
@@ -75,7 +75,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://hugo-and-cat-limited.workable.com/j/629A753D6B'>Hugo & Cat Limited - Jobs: Data and SEO Analyst (Contract / Contract to Perm) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hugo-and-cat-limited.workable.com/j/629A753D6B'>Hugo & Cat Limited - Jobs: Data and SEO Analyst (Contract / Contract to Perm) - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -283,7 +283,7 @@ DVS) development in all therapeutic areas; writing specifications for analysis?.
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/elsevier/jobs/crime-data-analyst-i-25101'>Crime Data Analyst I - ELSEVIER Careers</a></h5> 
+<h5><a href='https://4re.referrals.selectminds.com/elsevier/jobs/crime-data-analyst-i-25101'>Crime Data Analyst I - ELSEVIER Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... This position exists to provide Crime Analysis services to a customer of 
 LexisNexis to include tactical, strategic, administrative, and operational...</p>
@@ -296,7 +296,7 @@ LexisNexis to include tactical, strategic, administrative, and operational...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://colorado.avature.net/jobs/JobDetail?jobId=19728'>Quantitative Data Analyst and Liaison</a></h5> 
+<h5><a href='https://colorado.avature.net/jobs/JobDetail?jobId=19728'>Quantitative Data Analyst and Liaison</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... The Renee Crown Wellness Institute seeks a Quantitative Data Analyst and 
 Liaison (QDAL) with advanced Stata skills who can oversee all the quantitative 
@@ -351,7 +351,7 @@ Berlin (published: 15.05.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Noida</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/reachire/d61d6082-4fac-4bfa-a37f-ecc5d2574878'>reacHIRE - HR Coordinator/Data Analyst - Return-to-Work Program</a></h5> 
+<h5><a href='https://jobs.lever.co/reachire/d61d6082-4fac-4bfa-a37f-ecc5d2574878'>reacHIRE - HR Coordinator/Data Analyst - Return-to-Work Program</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
